--- a/base/public/ clubesLectura.html
+++ b/base/public/ clubesLectura.html
@@ -26,11 +26,13 @@
           </div>
           <div class="nav-container">
             <a href="listar_librerias.html" id="optionNavLibrerias">Librerias</a>
+            <a href="listar_sucursales.html" id="optionNavSucursales">Sucursales</a>
             <a href="%20clubesLectura.html" id="optionNavClubes">Clubes de Lectura</a>
             <a href="listar_libros.html" id="optionNavLibros">Libros</a>
             <a href="listar-autores.html" id="optionNavAutores">Autores</a>
             <a href="listar_genero.html" id="optionNavGenero">Géneros</a>
             <a href="listar_categoría.html" id="optionNavCategoria">Categoria</a>
+            <a href="listar_tarjetas.html">Tarjetas</a>
             <a href="#" id="optionIntercambio">Intercambios</a>
             <a href="listar-usuarios.html" id="optionNavUsuarios">Usuarios</a>
           </div>
