--- a/base/public/visualizarperfil_admingeneral.html
+++ b/base/public/visualizarperfil_admingeneral.html
@@ -66,7 +66,7 @@
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <script src="js/servicio_admingeneral.js"></script>
         <script src="js/controlador_visualizaradmingeneral.js"></script>
-        
+        <script src="js/controlador_cerrar_sesion.js"></script>
         </body>
         
         </html>
