--- a/base/public/visualizar_perfil_admin_libreria.html
+++ b/base/public/visualizar_perfil_admin_libreria.html
@@ -77,6 +77,7 @@
     <script src="js/controlador_perfil_libreria.js"></script>
     <script src="js/getNombre.js"></script>
     <script src="js/controlador_cerrar_sesion.js"></script>
+    <script src="js/controlador_perfil_admin_libreria.js"></script>
 
 </body>
 
