--- a/base/public/registrar_categoria.html
+++ b/base/public/registrar_categoria.html
@@ -64,6 +64,9 @@
 
       <button type ="button" class ="boton_registrar" id="btn_registrar">Registrar</button>
 
+      <footer>
+        
+      </footer>
 
     </main>
 
