--- a/base/public/ver_perfil_libro.html
+++ b/base/public/ver_perfil_libro.html
@@ -46,7 +46,7 @@
 
 <body>
 
-    <button onclick="goBack()">Regresar</button id="btn_regresar">
+    <button id="btn_regresar" onclick="goBack()">Regresar</button >
 
 <div class="contenedor-perfil">
 
