--- a/base/public/crear_contrasenna.html
+++ b/base/public/crear_contrasenna.html
@@ -38,10 +38,26 @@
 
         <section id = "datos_contrasenna">
   
-            
-          <input id="txt_pin"  type="text"  placeholder = "Digite el pin brindado" >
-          <input id="txt_contrasenna"  type="text"  placeholder = "Digite su nueva Contraseña" >
-          <input id="txt_verificacion"  type="text"  placeholder = "Digite nuvamente la Contraseña" >
+          <div>
+
+              <input id="txt_pin"  type="text"  placeholder = "Digite el pin brindado" >
+
+          </div>
+
+          <div>
+
+              <input id="txt_contrasenna"  type="text"  placeholder = "Digite su nueva Contraseña" >
+
+
+          </div>
+
+          <div>
+
+              <input id="txt_verificacion"  type="text"  placeholder = "Digite nuvamente la Contraseña" >
+
+
+          </div>
+      
   
         </section>
   
