--- a/base/public/registrar_libreria.html
+++ b/base/public/registrar_libreria.html
@@ -30,104 +30,113 @@
     <main>
 
 
-        <h1>Registrar Librería</h1>
+        <div class="pantalla_dividida1">
 
-        <section id="datos_libreria">
+        </div>
 
-            <h2>Datos de la Librería</h2>
+        <div class="pantalla_dividida2">
 
-            <div class="datos">
+            <h1>Registrar Librería</h1>
 
-                <label for="txt_nombre_comercial"> Nombre Comercial</label>
-                <input id="txt_nombre_comercial" type="text">
+            <section id="datos_libreria">
 
-                <label for="txt_nombre_fantasia">Nombre Fantasía</label>
-                <input id="txt_nombre_fantasia" type="text">
+                <h2>Datos de la Librería</h2>
 
-                <label for="txt_direccion">Dirección</label>
-                <textarea name="" id="txt_direccion"></textarea>
+                <div class="datos">
 
-            </div>
+                    <label for="txt_nombre_comercial"> Nombre Comercial</label>
+                    <input id="txt_nombre_comercial" type="text">
 
-            <div class="mapa">
+                    <label for="txt_nombre_fantasia">Nombre Fantasía</label>
+                    <input id="txt_nombre_fantasia" type="text">
 
-                <div id="map">
+                    <label for="txt_direccion">Dirección</label>
+                    <textarea name="" id="txt_direccion"></textarea>
 
                 </div>
 
-            </div>
+                <div class="mapa">
 
-        </section>
+                    <div id="map">
 
-        <section id="datos_admi_libreria">
+                    </div>
 
-            <h2>Datos del Administrador de Librería</h2>
+                </div>
 
-            <div class="subir_avatar">
-                <figure class="avatar">
-                    <img src="imgs/img_avatar.jpg" alt="Seleccionar imagen" id="img_avatar_admin_libreria">
-                </figure>
-                <button type="button" id="btn_seleccionar_avatar_admin_libreria" class="boton_subir_avatar">Subir imagen
-                </button>
-            </div>
+            </section>
 
-            <label for="txt_identificacion">Identificación</label>
-            <input id="txt_identificacion" type="text">
+            <section id="datos_admi_libreria">
 
-            <div class="izquierda">
+                <h2>Datos del Administrador de Librería</h2>
 
-                <label for="txt_primer_nombre">Primer Nombre</label>
-                <input id="txt_primer_nombre" type="text">
+                <div class="subir_avatar">
+                    <figure class="avatar">
+                        <img src="imgs/avatar_img.png" alt="Seleccionar imagen" id="img_avatar_admin_libreria">
+                    </figure>
+                    <button type="button" id="btn_seleccionar_avatar_admin_libreria" class="boton_subir_avatar">Subir
+                        imagen
+                    </button>
+                </div>
 
-                <label for="txt_segundo_nombre">Segundo Nombre</label>
-                <input id="txt_segundo_nombre" type="text">
+                <label for="txt_identificacion">Identificación</label>
+                <input id="txt_identificacion" type="text">
 
-                <label for="txt_primer_apellido">Primer Apellido</label>
-                <input id="txt_primer_apellido" type="text">
+                <div class="izquierda">
 
-                <label for="txt_segundo_apellido">Segundo Apellido</label>
-                <input id="txt_segundo_apellido" type="text">
+                    <label for="txt_primer_nombre">Primer Nombre</label>
+                    <input id="txt_primer_nombre" type="text">
 
-                <label for="txt_nombre_usuario">Nombre Usuario</label>
-                <input id="txt_nombre_usuario" type="text">
+                    <label for="txt_segundo_nombre">Segundo Nombre</label>
+                    <input id="txt_segundo_nombre" type="text">
+
+                    <label for="txt_primer_apellido">Primer Apellido</label>
+                    <input id="txt_primer_apellido" type="text">
+
+                    <label for="txt_segundo_apellido">Segundo Apellido</label>
+                    <input id="txt_segundo_apellido" type="text">
+
+                    <label for="txt_nombre_usuario">Nombre Usuario</label>
+                    <input id="txt_nombre_usuario" type="text">
 
 
-            </div>
+                </div>
 
 
-            <div class="izquierda">
+                <div class="izquierda">
 
-                <label for="txt_sexo">Genero</label>
-                <select name="" id="txt_sexo">
-                    <option value="">Genero</option>
-                    <option value="Femenino">Femenino</option>
-                    <option value="Masculino">Masculino</option>
-                    <option value="Otro">Otro</option>
-                </select>
+                    <label for="txt_sexo">Genero</label>
+                    <select name="" id="txt_sexo">
+                        <option value="">Genero</option>
+                        <option value="Femenino">Femenino</option>
+                        <option value="Masculino">Masculino</option>
+                        <option value="Otro">Otro</option>
+                    </select>
 
-                <label for="txt_correo">Correo</label>
-                <input id="txt_correo" type="text">
+                    <label for="txt_correo">Correo</label>
+                    <input id="txt_correo" type="text">
 
-                <label for="txt_provincia">Provincia</label>
-                <select name="" id="txt_provincia" onchange="llenarCantones(value)">
-                    <option value="#">Seleccionar Provincia </option>
-                </select>
+                    <label for="txt_provincia">Provincia</label>
+                    <select name="" id="txt_provincia" onchange="llenarCantones(value)">
+                        <option value="#">Seleccionar Provincia </option>
+                    </select>
 
-                <label for="txt_canton">Cantón</label>
-                <select name="" id="txt_canton" onchange="llenarDistritos(value)">
-                    <option value="#">Seleccionar Cantón</option>
-                </select>
+                    <label for="txt_canton">Cantón</label>
+                    <select name="" id="txt_canton" onchange="llenarDistritos(value)">
+                        <option value="#">Seleccionar Cantón</option>
+                    </select>
 
-                <label for="txt_distrito">Distrito</label>
-                <select name="" id="txt_distrito">
-                    <option value="#">Seleccionar Distrito</option>
-                </select>
+                    <label for="txt_distrito">Distrito</label>
+                    <select name="" id="txt_distrito">
+                        <option value="#">Seleccionar Distrito</option>
+                    </select>
 
-            </div>
+                </div>
 
-        </section>
+            </section>
 
-        <button id="btn_registrar"> Registrar </button>
+            <button id="btn_registrar"> Registrar </button>
+
+        </div>
 
     </main>
 
